# controller

./: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  main.cpp
libs_shared/: libpaho-mqtt3a.1.3.8.dylib  libpaho-mqtt3a.1.dylib  libpaho-mqtt3a.dylib  libpaho-mqtt3as.1.3.8.dylib  libpaho-mqtt3as.1.dylib  libpaho-mqtt3as.dylib  libpaho-mqtt3c.1.3.8.dylib  libpaho-mqtt3c.1.dylib  libpaho-mqtt3c.dylib  libpaho-mqtt3cs.1.3.8.dylib  libpaho-mqtt3cs.1.dylib  libpaho-mqtt3cs.dylib  libpaho-mqttpp3.1.2.0.dylib  libpaho-mqttpp3.1.dylib  libpaho-mqttpp3.dylib
libs_shared_linux/: libpaho-mqtt3a.so.1.3.8  libpaho-mqtt3as.so.1.3.8  libpaho-mqtt3c.so.1.3.8  libpaho-mqtt3cs.so.1.3.8  libpaho-mqttpp3.so.1.2.0
